--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "echarts": "^4.7.0",
     "element-ui": "^2.13.0",
+    "lodash": "^4.17.15",
     "vue": "^2.5.2",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
